# Emergent-Multi-Agent-Systems

./: .gitignore  README.md  architecture.md  pyproject.toml  requirements.txt
experiments/: dashboard.py  demo_complex.py  demo_logistics.py  demo_trained.py  make_gif.py  train_rl.py
src/agents/: abstract.py  physical.py
src/core/: agent.py  communication.py  metrics.py  world.py
src/learning/: policy.py  rl_policy.py
src/simulation/: environment.py
src/vis/: visualizer.py
tests/: test_core.py
