[project]
name = "emergent-mas"
version = "0.1.0"
description = "Emergent Multi-Agent Systems Simulation Engine"
authors = [
    {name = "Cronenberg64", email = "user@example.com"},
]
dependencies = [
    "numpy",
    "networkx",
    "matplotlib",
    "gymnasium",
    "pettingzoo",
    "torch",
]
requires-python = ">=3.9"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
